# finalis-core

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: finalis-mint-packaging.yml  finalis-wallet-packaging.yml  formal-verification.yml  simulator-conformance.yml  windows-release.yml
apps/finalis-cli/: main.cpp
apps/finalis-explorer/: README.md  main.cpp
apps/finalis-wallet/: wallet_window.cpp  wallet_window.hpp
apps/finalis-wallet/widgets/: advanced_page.cpp  advanced_page.hpp
docs/: EXCHANGE_INTEGRATION.md
packaging/windows/: Stage-WindowsRelease.ps1  Start-Finalis.ps1  finalis-core.iss
scripts/: package_reference_wallet.sh
src/availability/: retention.cpp
src/common/: paths.cpp  socket_compat.hpp  wide_arith.hpp
src/consensus/: canonical_derivation.cpp  canonical_derivation.hpp  finalized_committee.cpp  monetary.cpp
src/lightserver/: client.cpp  client.hpp  server.cpp  server.hpp
src/mempool/: mempool.cpp
src/node/: node.cpp  node.hpp
src/p2p/: addrman.cpp  addrman.hpp  framing.cpp  framing.hpp  hardening.cpp  hardening.hpp  peer_manager.cpp  peer_manager.hpp
src/storage/: db.cpp  db.hpp
src/wallet/: utxo_selection.cpp
tests/: test_availability.cpp  test_committee_schedule.cpp  test_explorer.cpp  test_frontier_replay.cpp  test_hardening.cpp  test_integration.cpp  test_keystore.cpp  test_lightserver.cpp  test_main.cpp  test_p2p.cpp  test_paths.cpp  test_smt.cpp
tests/fixtures/checkpoint/: availability_ejected_excluded.json  enter_fallback_below_min.json  grandfathered_genesis_below_min_bond.json  normal_large_candidates.json  post_genesis_below_min_bond_rejected.json  recover_normal_min_plus_one.json  shuffled_small_candidate_set.json  sticky_fallback_equal_min.json
tools/: checkpoint_fixture_export.cpp
